4.56

- Added: d_sm_vec_weighting to dom_settings table (one can set the weight for selectRandomWeight function for planes, helicopters, tanks and other vehicles in there)
- Added: Parameter d_WithVoicesDisabled (default 0) to disable voices, currently only works for VN map using their module, by longtimegamer
- Added: New parameter d_pnspace_msave (default 1, enabled), "Save mission progress to profileNamespace if no database is available"
- Added: New parameter d_pnspace_msave_auto (default 1, enabled), "Saved profileNamespace mission progress auto load"
- Changed: Side mission bonus vehicles are no longer selected consecutively
- Changed: Recruit terminal in Altis Blufor version moved closer to spawn point
- Fixed: If d_with_ranked was set to 2 (Ranked mode on but weapons not ranked) d_remove_from_arsenal was not processed
- Fixed: Main target mission buildings got destroyed 30 seconds after creation
- Fixed: Snipers were not being created with new dynamic parameter
- Fixed: HUD with duplicated character "Score::"
- Fixed: Vehicle markers are not shown when player AI is alone in vehicles
- Fixed: When AI aggressive shoot (d_ai_aggressiveshoot) was activated AI was shooting at unconscious players
- Fixed: No sidemission bonus vehicles were awarded in the TT version
- Fixed: TT points were broadcasted before the variables were created on the server
- Fixed: JIP was disabled for remoteExecCall functions which make use for JIP
- Optimized: Do not spawn commander in AI vehicles
- Tweaked: Spawn factor variables