@@ -4,6 +4,7 @@
 - Added: Parameter d_WithVoicesDisabled (default 0) to disable voices, currently only works for VN map using their module, by longtimegamer
 - Added: New parameter d_pnspace_msave (default 1, enabled), "Save mission progress to profileNamespace if no database is available"
 - Added: New parameter d_pnspace_msave_auto (default 1, enabled), "Saved profileNamespace mission progress auto load"
+- Added: New parameter d_artycheckfriendlies (Check for friendly units near artillery targets when firing artillery), default Yes (1)
 - Changed: Side mission bonus vehicles are no longer selected consecutively
 - Changed: Recruit terminal in Altis Blufor version moved closer to spawn point
 - Fixed: If d_with_ranked was set to 2 (Ranked mode on but weapons not ranked) d_remove_from_arsenal was not processed
